adds demographic data for interview regions

--- a/docs/7-interviews/70-outline.tex
+++ b/docs/7-interviews/70-outline.tex
@@ -1,13 +1,13 @@
 \section{Introduction}
 
 Earlier chapters introduced a novel modeling tool, \ac{osier}, which sought to
-fill a gap in the literature and available modeling tools by offering a flexible
+fill a gap in the literature and available modeling tools by developing a flexible
 multi-objective optimization framework that allows users to incorporate concepts
 of justice, the ``human dimension'' \cite{pfenninger_energy_2014}. This is
 possible because \ac{osier} enables users to optimize any quantifiable objective
 which encourages modelers to seek input from the communities they model for
 their energy system priorities, as suggested by McGookin et al. 2024
-\cite{mcgookin_advancing_2024} thereby elevating the recognition and procedural
+\cite{mcgookin_advancing_2024}, thereby elevating the recognition and procedural
 aspects of justice described in Chapter \ref{chapter:lit-review}. Additionally,
 \ac{osier} transcends scale limitations due to it's flexible design, making it
 useful for municipalities as well as larger governing units. This chapter
@@ -19,7 +19,7 @@ Naperville), a university with its own microgrid (\acf{uiuc}), and Illinois ener
 organizations (\acf{ICC}, \acf{IPA}, \acf{icea}, and the Illinois \acf{cub}). This
 chapter also considers the varied perspectives of different energy planning participants
 within their respective contexts by interviewing city planners,
-city council members, and advisory staff. This study contributes to the existing 
+a city council member, and various advisory staff. This study contributes to the existing 
 literature on participatory and distributed energy planning as well as illustrating
 a path towards a holistic integration of energy justice and energy system engineering.
 
@@ -84,6 +84,9 @@ coding step was also performed locally with the \texttt{Taguette} tool
 
 \subsection{Interview Data Collection}
 
+A total of thirteen interviews were conducted through the second half of 2024 and 
+beginning of 2025 using a semi-structured approach.
+
 \begin{enumerate}
     \item Who did I interview and what organizations were they from?
     \item Why did I choose these interviews?
@@ -91,24 +94,16 @@ coding step was also performed locally with the \texttt{Taguette} tool
     \item How were the interviews conducted? (i.e., over Zoom)
 \end{enumerate}
 
-\section{Case ``Municipalities''}
+\section{Case Regions}
 \label{section:cases}
 
-\textcolor{red}{These aren't all municipalities (e.g., Illinois) I'll come up
-with a better word later. This is where I want to describe the places of
-interest.}
+Table \ref{tab:demographics} shows the sizes of each planning context by population.
 
-\subsection{Champaign, Illinois}
-\subsection{Urbana, Illinois}
-\subsection{\acf{uiuc}}
-\subsection{Naperville, Illinois}
-Naperville is interesting because it owns the distribution utility that serves
-electricity but does not own any generation.
-\begin{enumerate}
-    \item \ac{nest}
-    \item City of Naperville (Sustainability Department)
-\end{enumerate}
+
+
 \subsection{State of Illinois}
+Illinois is split between two \acpl{rto}, MISO and PJM.
+
 \begin{enumerate}
     \item \ac{icc}
     \item \ac{ipa}
@@ -116,6 +111,39 @@ electricity but does not own any generation.
     \item Illinois \ac{cub}
 \end{enumerate}
 
+
+
+\begin{table}
+    \centering
+    \label{tab:demographics}
+    \begin{tabular}{cc}
+        Region & Population & Operating Budget (millions of \$) & Median Household Income (\$/year) \\
+        Illinois & 12,710,158  & 53,419 & 81,702\\
+        Naperville & 150,249  & 641 & 150,937 \\
+        Champaign & 89,189 & 210 & 57,544 \\
+        Urbana & 38,201 & 85 & 45,854 \\
+        \ac{uiuc} & 59,916 & 3,078 & N/A \\
+    \end{tabular}
+\end{table}
+
+\subsection{Champaign and Urbana, Illinois}
+These two contexts are considered together due to their proximity and close relationship. 
+
+Here are their climate action plans...
+
+\subsection{\acf{uiuc}}
+\ac{uiuc}, Illinois' largest university, straddles the two municipalities of Champaign
+and Urbana and its student enrollment rivals the populations of its neighbors. 
+
+Here is its climate action plan...
+
+\subsection{Naperville, Illinois}
+Naperville is interesting because it owns the distribution utility that serves
+electricity but does not own any generation.
+\begin{enumerate}
+    \item \ac{nest}
+    \item City of Naperville (Sustainability Department)
+\end{enumerate}
 
 \section{Energy Planning in Illinois}
 
