--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -71,3 +71,5 @@
 \acro{nest}[NEST]{Naperville Environment and Sustainability Task Force}
 \acro{cub}[CUB]{Citizens Utility Board}
 \acro{ai}[AI]{artificial intelligence}
+\acro{rto}[RTO]{regional transmission authority}
+\acrodefplural{rto}[RTOs]{regional transmission authorities}
