--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -58,6 +58,7 @@
 \acro{imea}[IMEA]{Illinois Municipal Electric Agency}
 \acro{icea}[ICEA]{Illinois Competitive Energy Association}
 \acro{ppa}[PPA]{power purchase agreement}
+\acrodefplural{ppa}[PPAs]{power purchase agreements}
 \acro{pypsa}[\texttt{PyPSA}]{Python for Power Systems Analysis}
 \acro{lib}[LiB]{lithium-ion battery}
 \acrodefplural{lib}[LiBs]{lithium-ion batteries}
@@ -73,3 +74,6 @@
 \acro{ai}[AI]{artificial intelligence}
 \acro{rto}[RTO]{regional transmission authority}
 \acrodefplural{rto}[RTOs]{regional transmission authorities}
+\acro{ares}[ARES]{alternative retail electric supplier}
+\acrodefplural{ares}[ARES]{alternative retail electric suppliers}
+\acro{pei}[PEI]{Prairieland Energy, Inc.}
