handle merge conf

--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -61,7 +61,28 @@
 
 \subsection{What is the \ac{set}?}
 
+The \ac{set} is an Excel-based application containing metric data from the Nuclear Fuel Cycle Evaluation and Screening Study
+\cite{wigeland_nuclear_2014}. The website for the \ac{set} suggests the following use cases \cite{pincock_screening_2014}:
+\begin{enumerate}
+    \item A user can repeat the evaluation and screening process used in the Study that identified the promising options for R\&D, with either the entire set of options (\acp{eg}) or a subset of the options.
+    \item A user can explore the effects of varying the relative importance of the criteria on the identification of fuel cycles that might be considered promising for R\&D.
+    \item A user can perform an evaluation and screening of fuel cycles specified by the user by developing the metric data according to the information in the final report and adding the data to the SET tool.
+\end{enumerate}
+
 \subsection{What metrics are available?}
+
+The \ac{set} evaluates fuel cycles on a set of nine criteria \cite{wigeland_nuclear_2014}:
+\begin{enumerate}
+    \item Nuclear waste management
+    \item Proliferation risk
+    \item Nuclear Material security risk
+    \item Safety
+    \item Environmental impacts
+    \item Resource Utilization
+    \item Development and deployment risk
+    \item Institutional issues
+    \item Economics
+\end{enumerate}
 
 \subsection{Data for the simulation}
 
