--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -53,7 +53,7 @@
 \acrodefplural{smr}[SMRs]{small modular reactors}
 \acro{ipa}[IPA]{Illinois Power Agency}
 \acro{icc}[ICC]{Illinois Commerce Commission}
-\acro{set}[SET tool]{Screening and Evaluation Tool}
+\acro{set}[SET Tool]{Fuel Cycle Evaluation and Screening Software}
 \acro{mca}[MCA]{municipal choice aggregation}
 \acro{imea}[IMEA]{Illinois Municipal Electric Agency}
 \acro{ppa}[PPA]{power purchase agreement}
@@ -67,3 +67,5 @@
 \acro{co2}[CO$_2$]{carbon dioxide}
 \acro{co2eq}[CO$_2$-eq]{CO$_2$-equivalent}
 \acro{unece}[UNECE]{United Nations Economic Commission for Europe}
+\acro{eg}[EG]{evaluation group}
+\acrodefplural{eg}[EGs]{evaluation groups}
