adds rule to extract data from SET tool

--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -71,7 +71,7 @@ The \ac{set} is an Excel-based application containing metric data from the Nucle
 
 \subsection{What metrics are available?}
 
-The \ac{set} evaluates fuel cycles on a set of nine criteria \cite{wigeland_nuclear_2014}:
+The \ac{set} evaluates fuel cycles on a set of nine aggregated criteria \cite{wigeland_nuclear_2014}:
 \begin{enumerate}
     \item Nuclear waste management
     \item Proliferation risk
@@ -83,6 +83,9 @@ The \ac{set} evaluates fuel cycles on a set of nine criteria \cite{wigeland_nucl
     \item Institutional issues
     \item Economics
 \end{enumerate}
+
+Most of these criteria include several sub-criteria. For example, the environmental impacts criteria 
+includes water use and land use as two sub-criteria \cite{wigeland_nuclear_2014-1}.
 
 \subsection{Data for the simulation}
 
