--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -20550,3 +20550,17 @@ routes, treatment technologies, and disposal sites is of prime ...},
 	doi = {10.2172/1170301},
 	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/E9GJ4VDN/Pincock - 2014 - Screening and Evaluation Tool (SET) Users Guide.pdf:application/pdf},
 }
+
+@report{wigeland_nuclear_2014-1,
+	location = {Idaho Falls, {ID}},
+	title = {Nuclear Fuel Cycle Evaluation and Screening - Final Report - Appendix D},
+	url = {https://fuelcycleevaluation.inl.gov/Shared%20Documents/ES%20Appendix%20D.pdf},
+	pages = {151},
+	number = {{INL}/{EXT}-14-31465},
+	institution = {Idaho National Lab},
+	author = {Wigeland, R and Taiwo, T and Ludewig, H and Todosow, M and Halsey, William and Gehin, J and Rubin, R and Buelt, J and Stockinger, S and Jenni, K and Oakley, B},
+	urldate = {2025-05-14},
+	date = {2014-10-08},
+	langid = {english},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/8MNQC8MF/ES Appendix D.pdf:application/pdf},
+}
