adds table of SET tool metric data

--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -69,3 +69,9 @@
 \acro{unece}[UNECE]{United Nations Economic Commission for Europe}
 \acro{eg}[EG]{evaluation group}
 \acrodefplural{eg}[EGs]{evaluation groups}
+\acro{llw}[LLW]{low-level waste}
+\acro{hlw}[HLW]{high-level waste}
+\acro{du}[DU]{depleted uranium}
+\acro{ru}[RU]{recovered uranium}
+\acro{rth}[RTh]{recovered thorium}
+
